Implemented Retrofit2 library for fetch the feeds from web server and displayed that feeds in Recycler view.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorItemFeedTitle">#1B3372</color>
+    <color name="colorItemFeedBgStart">#ECECEC</color>
+    <color name="colorItemFeedBgEnd">#FBFBFB</color>
 </resources>
