Added Orientation Support and implemented picasso library

--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/image_item_right_arrow"
-        android:layout_width="@dimen/arrow_size"
-        android:layout_height="@dimen/arrow_size"
+        android:layout_width="@dimen/item_feed_arrow_size"
+        android:layout_height="@dimen/item_feed_arrow_size"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
@@ -23,25 +23,37 @@
         android:layout_toLeftOf="@id/image_item_right_arrow"
         android:layout_toStartOf="@id/image_item_right_arrow"
         android:textColor="@color/colorItemFeedTitle"
-        android:textSize="@dimen/item_title_text_size" />
+        android:textSize="@dimen/item_feed_title_text_size" />
 
-    <ImageView
-        android:id="@+id/image_item_feed"
-        android:layout_width="@dimen/item_image_size"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_item_title"
-        android:layout_toLeftOf="@id/image_item_right_arrow"
-        android:layout_toStartOf="@id/image_item_right_arrow"
-        android:contentDescription="@string/description_image" />
-
-    <TextView
-        android:id="@+id/text_item_description"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_item_title"
-        android:layout_toLeftOf="@id/image_item_feed"
-        android:layout_toStartOf="@id/image_item_feed"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/item_description_text_size" />
+        android:layout_toLeftOf="@id/image_item_right_arrow"
+        android:layout_toStartOf="@id/image_item_right_arrow">
+
+        <ImageView
+            android:id="@+id/image_item_feed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/item_feed_margin_left"
+            android:layout_marginStart="@dimen/item_feed_margin_left"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/description_image"
+            android:maxHeight="@dimen/item_feed_image_max_size"
+            android:maxWidth="@dimen/item_feed_image_max_size" />
+
+        <TextView
+            android:id="@+id/text_item_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/image_item_feed"
+            android:layout_toStartOf="@id/image_item_feed"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/item_feed_description_text_size" />
+    </RelativeLayout>
 
 </RelativeLayout>
